--- a/example/simple/pubspec.yaml
+++ b/example/simple/pubspec.yaml
@@ -1,23 +1,14 @@
-name: tekartik_html_transformer_example_simple
+name: tekartik_dtk_transformer_example_simple
 version: 0.1.0
 description: Simple site
 dependencies:
-  barback: any
-  logging: any
-  markdown: any
-  path: any
-#  tekartik_asset_jquery:
-#    path: ../../../dart-assets/asset_jquery
-#  tekartik_asset_jquerymobile:
-#    path: ../../../dart-assets/asset_jquerymobile
-#  tekartik_common:
-#    path: ../../common
-  tekartik_html:
-    git: https://github.com/alextekartik/tekartik_html.dart
-  tekartik_html_transformer:
+  tekartik_dtk_transformer:
     path: ../..
 dev_dependencies:
   test: any
   dev_test: any
+  tekartik_pub:
+    git: git://github.com/tekartik/tekartik_pub.dart
+
 transformers:
- - tekartik_html_transformer/dtk_transformer
+ - tekartik_dtk_transformer/dtk_transformer
